Revert "fix: issue #212 - problem width page width on mobile devices" because it breaks all other usages of the container class, e.g. the navigation bar. Instead, prevent the browser from calculating the minimum width.

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -118,12 +118,10 @@ body ::-webkit-scrollbar-thumb {
   background-color: var(--scrollbar-thumb-color);
 }
 
-@media screen and (min-width: 1024px) {
-  .container {
-    display: flex;
-    position: relative;
-    width: 100%;
-    max-width: 1280px;
-    margin: 0 auto;
-  }
+.container {
+  display: flex;
+  position: relative;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
 }
